task5/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-end-to-backend
spec:
  podSelector:
    matchLabels:
      app: back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: front-end
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-front-end-to-admin-backend
spec:
  podSelector:
    matchLabels:
      app: admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-front-end
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-front-end-traffic
spec:
  podSelector:
    matchLabels:
      app: front-end
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: back-end-api
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-backend-to-admin-front-end-traffic
spec:
  podSelector:
    matchLabels:
      app: admin-front-end
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-back-end-api
  policyTypes:
  - Ingress
